--- a/eureka-service/build.gradle
+++ b/eureka-service/build.gradle
@@ -22,8 +22,10 @@ ext {
 }
 
 dependencies {
+	// spring cloud
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
 	// data
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
