--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -43,9 +43,15 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    // mapstruct
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
