feat: payment - common library 적용#25
- success code
- success response

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -29,6 +29,9 @@ ext {
 }
 
 dependencies {
+    // common
+    implementation 'io.github.boeingmerryho:common-library:1.0.2'
+
     // eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
