--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     // common
-    implementation 'io.github.boeingmerryho:common-library:1.0.1'
+    implementation 'io.github.boeingmerryho:common-library:1.0.3'
 
     // map struct
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
@@ -47,6 +47,7 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     // Database
     runtimeOnly 'com.mysql:mysql-connector-j'
