[Seat] : ADMIN - 좌석 생성하기 #24
1. BaseEntity 삭제

2. build.gradle
- common library 적용

3. SeatReservation
- BaseEntity (common library 내 BaseEntity 설정)

--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -28,6 +28,8 @@ ext {
 }
 
 dependencies {
+    // common-library
+    implementation 'io.github.boeingmerryho:common-library:1.0.3'
 
     // data
     runtimeOnly 'com.mysql:mysql-connector-j'
