--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "2024.0.1")
+    set('querydslVersion', "5.0.0")
 }
 
 dependencies {
@@ -38,7 +39,13 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     // common
-    implementation 'io.github.boeingmerryho:common-library:1.0.3'
+    implementation 'io.github.boeingmerryho:common-library:1.0.4'
+
+    // querydsl
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // map struct
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
