--- a/ticket-service/build.gradle
+++ b/ticket-service/build.gradle
@@ -25,9 +25,13 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2024.0.1")
+	set('querydslVersion', "5.0.0")
 }
 
 dependencies {
+	// Common
+	implementation 'io.github.boeingmerryho:common-library:1.0.4'
+
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -39,8 +43,18 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// map struct
+	implementation "org.mapstruct:mapstruct:1.5.5.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
+
 	// MySql
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// querydsl
+	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -55,4 +69,18 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+	main {
+		java {
+			srcDir querydslDir
+		}
+	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.generatedSourceOutputDirectory = querydslDir
 }
