--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    // eureka
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    // redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.2'
+
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
