feat: store - queue status update api#35
- 각 store 별 자동 queue 활성화/비활성화

--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // Kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
