--- a/queue-service/build.gradle
+++ b/queue-service/build.gradle
@@ -70,6 +70,8 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	implementation 'org.redisson:redisson-spring-boot-starter:3.45.1'
+
 }
 
 def querydslSrcDir = 'src/main/generated'
