[Seat] : 좌석 선점 #98
build.gradle
- Kafka 설치

SeatController
- 좌석 선점하기, processBlockSeats

SeatService
- 좌석 선점하기, processBlockSeats

ProcessBlockSeatsService
- getMatchInfo
- getBlockSeats
- processBlockSeats
- createCacheBlockKey
- getBlockSeats
- parseSeatBucket
- createLockKey
- createCacheSeatKey

SeatSuccessCode
- PROCESS_SEAT 성공 메시지 추가
- ALREADY_PROCESS_SEAT 성공 메시지 추가

SeatErrorCode
- NOT_EXCEED_4_SEAT 에러 메시지 추가
- FAILED_GET_LOCK 에러 메시지 추가
- FAILED_PROCESS_SEAT 에러 메시지 추가

SeatPresentationMapper
- toCacheSeatProcessServiceRequestDto
- toCacheSeatsProcessServiceRequestDto

Presentation Request Dto
- CacheSeatProcessRequestDto
- CacheSeatsProcessRequestDto

SeatApplicationMapper
- toTicketSeatDto
- toTicketDto

Application request Dto
- CacheSeatProcessServiceRequestDto
- CacheSeatsProcessServiceRequestDto
- ToTicketMatchDto
- ToTicketSeatDto
- ToTicketDto

--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     // Cache
     implementation 'com.github.ben-manes.caffeine:caffeine'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
@@ -63,6 +66,7 @@ dependencies {
 
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
