--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
+    // Kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
