--- a/ticket-service/build.gradle
+++ b/ticket-service/build.gradle
@@ -30,14 +30,21 @@ ext {
 
 dependencies {
 	// Common
-	implementation 'io.github.boeingmerryho:common-library:1.0.4'
+	implementation 'io.github.boeingmerryho:common-library:1.1.2'
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -58,6 +65,7 @@ dependencies {
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
