feat: payment - user 권한 처리#164
- common library
- redis 2대 연결
- 인터셉터

--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8888/"
   profiles:
-    active: dev
+    active: prod
   application:
     name: payment-service
