[Seat] : 통합 라이브러리 연동 #145
build.gradle
- Redis 의존성 추가
- common-library 버전 1.1.2 수정

JpaAuditingConfig
- auditorProvider 설정

ProcessBlockSeatsService
- processBlockSeats, Long userId 추가

RedisConfig
- Redis 설정 추가

RedissonConfig
- Redisson 설정 추가

RedisUserInfoProvider
- 공통 라이브러리 interface 구현

SeatAdminService
- createCacheSeats, 날짜 Validate 추가

SeatController
- processBlockSeats, userId 매개변수 추가

SeatService
- processBlockSeats, userId 매개변수 추가

WebMvcConfig
- addInterceptors 메서드 추가

--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -29,7 +29,7 @@ ext {
 
 dependencies {
     // common-library
-    implementation 'io.github.boeingmerryho:common-library:1.0.4'
+    implementation 'io.github.boeingmerryho:common-library:1.1.2'
 
     // data
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -45,6 +45,9 @@ dependencies {
 
     // eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // redisson
     implementation 'org.redisson:redisson-spring-boot-starter:3.23.2'
