--- a/store-service/src/main/resources/application.yml
+++ b/store-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: "optional:configserver:http://localhost:8888/"
+    import: "optional:configserver:http://config-service:8888/"
     name: store-service
   profiles:
     active: dev
