feat: service - profile 모드 변경#250
- dev -> prod

--- a/store-service/src/main/resources/application.yml
+++ b/store-service/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     import: "optional:configserver:http://localhost:8888/"
     name: store-service
   profiles:
-    active: dev
+    active: prod
   application:
     name: store-service
