--- a/membership-service/src/main/resources/application.yml
+++ b/membership-service/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     import: "optional:configserver:http://localhost:8888/"
     name: membership-service
   profiles:
-    active: dev
+    active: prod
   application:
     name: membership-service
