feat : gateway - logback 로깅 설정#274

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
-    implementation 'io.github.boeingmerryho:common-library:1.0.4'
+    implementation 'io.github.boeingmerryho:common-library:1.1.2'
+
+    implementation("net.logstash.logback:logstash-logback-encoder:8.0")
 }
 
 dependencyManagement {
