--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    implementation("net.logstash.logback:logstash-logback-encoder:8.0")
 }
 
 def querydslSrcDir = 'src/main/generated'
