--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -30,8 +30,9 @@ ext {
 
 dependencies {
     // Spring Boot starter
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Spring cloud
@@ -66,6 +67,9 @@ dependencies {
 
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
+
+    // metric
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // GCP Logging
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
