feat: payment - GCP CLOUD LOGGING 설정

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -73,6 +73,10 @@ dependencies {
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // GCP Logging
+    implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
+    implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
 }
 
 dependencyManagement {
