--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     // GCP Logging
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
     implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
+
+    // metric
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 dependencyManagement {
