fix : gateway - 로그 파일 저장 코드 삭제#289

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     // GCP Logging
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
     implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
+
+    // gRPC Netty
+    implementation("io.grpc:grpc-netty:1.71.0")
 }
 
 dependencyManagement {
