--- a/queue-service/build.gradle
+++ b/queue-service/build.gradle
@@ -81,6 +81,11 @@ dependencies {
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:testcontainers'
 
+    implementation("net.logstash.logback:logstash-logback-encoder:8.0")
+
+    // GCP Logging
+    implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
+    implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
 
 }
 
