[Seat] : 메트릭 설정하기 #297
SeatController
- 블록 별 좌석 조회하기 메트릭 설정
- 좌석 선점하기 메트릭 설정

WebMvcConfig
- actuator 경로 추가

build.gradle
- actuator
- metric

--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -71,6 +71,12 @@ dependencies {
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
     implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
 
+    // metric
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
