--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -31,6 +31,7 @@ ext {
 dependencies {
     // Spring Boot starter
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -64,6 +65,7 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.lettuce:lettuce-core'
 
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
