feat: payment - metrics 설정

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     // spring starter
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
