--- a/ticket-service/build.gradle
+++ b/ticket-service/build.gradle
@@ -34,11 +34,16 @@ dependencies {
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// GCP Logging
+	implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
+	implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
 
 	// Kafka
 	implementation 'org.springframework.kafka:spring-kafka'
@@ -65,6 +70,9 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// Prometheus
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
