feat: metrics 추가#309
- redis zset delay polling 지연 시간 측정
- daily queue scheduler 실행 처리 시간 측정

--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -30,8 +30,10 @@ ext {
 
 dependencies {
     // Spring Boot starter
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Spring cloud
@@ -62,9 +64,13 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.lettuce:lettuce-core'
 
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
+
+    // metric
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // GCP Logging
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
