feat : common - 프로메테우스, 그라파나 설정 추가#299

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,24 @@ services:
       gateway-service:
         condition: service_healthy
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - /home/boeing/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - kbo-network
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - kbo-network
+
 networks:
   kbo-network:
     driver: bridge
