feat : queue - 대기열 metric 설정#300

--- a/queue-service/build.gradle
+++ b/queue-service/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     implementation 'com.google.cloud:spring-cloud-gcp-logging:6.1.0'
     implementation 'com.google.cloud:spring-cloud-gcp-starter:6.1.0'
 
+    // prometheus
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 def querydslSrcDir = 'src/main/generated'
