feat : common - protobuf 의존성 추가

--- a/queue-service/build.gradle
+++ b/queue-service/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     // prometheus
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:4.28.2'
+
 }
 
 def querydslSrcDir = 'src/main/generated'
