--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     // prometheus
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
-
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:4.28.2'
 }
 
 dependencyManagement {
