--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -81,6 +81,9 @@ dependencies {
 
     // metric
     implementation 'io.micrometer:micrometer-registry-prometheus'
+
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:4.28.2'
 }
 
 dependencyManagement {
