--- a/seat-service/build.gradle
+++ b/seat-service/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:4.28.2'
 }
 
 dependencyManagement {
