--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:4.28.2'
 }
 
 dependencyManagement {
