--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   config:
-    import: "optional:configserver:http://config-service:8888/"
+    import: "optional:configserver:http://localhost:8888/"
   profiles:
-    active: prod
+    active: dev
   application:
     name: eureka-service
